--- a/pymaceuticals_starter.ipynb
+++ b/pymaceuticals_starter.ipynb
@@ -180,6 +180,29 @@
     "# Calculate the final tumor volume of each mouse across four of the treatment regimens:  \n",
     "# Capomulin, Ramicane, Infubinol, and Ceftamin\n",
     "\n",
+    "quartiles = temperatures.quantile([.25,.5,.75])\n",
+    "lowerq = quartiles[0.25]\n",
+    "upperq = quartiles[0.75]\n",
+    "iqr = upperq-lowerq\n",
+    "\n",
+    "print(f\"The lower quartile of temperatures is: {lowerq}\")\n",
+    "print(f\"The upper quartile of temperatures is: {upperq}\")\n",
+    "print(f\"The interquartile range of temperatures is: {iqr}\")\n",
+    "print(f\"The the median of temperatures is: {quartiles[0.5]} \")\n",
+    "\n",
+    "lower_bound = lowerq - (1.5*iqr)\n",
+    "upper_bound = upperq + (1.5*iqr)\n",
+    "print(f\"Values below {lower_bound} could be outliers.\")\n",
+    "print(f\"Values above {upper_bound} could be outliers.\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "fig1, ax1 = plt.subplots()\n",
+    "ax1.set_title('Temperatures at LAX')\n",
+    "ax1.set_ylabel('Temperature (°F)')\n",
+    "ax1.boxplot(temperatures)\n",
+    "plt.show()\n",
+    "\n",
     "# Start by getting the last (greatest) timepoint for each mouse\n",
     "\n",
     "\n",
