--- a/anti_cancer_pharmaceuticals_analysis.ipynb
+++ b/anti_cancer_pharmaceuticals_analysis.ipynb
@@ -1,6 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "eaaf2c02",
+   "metadata": {},
+   "source": [
+    "Four observations of data \n",
+    "\n",
+    "  \n",
+    "\n",
+    "Capomulin and Ramicane was administered over two hundred times opposed to the rest of the drugs that were administered around 180 times and the lowest being 150. you can see this clearly in the bar chart below. This may skew the results and give the outcome less impact. Though the recommended doses may be higher in Capomulin and Ramicane this would need to be investigated. \n",
+    "\n",
+    "  \n",
+    "\n",
+    "Capomulin and Ramicane have the lowest tumor volume numbers across all statistical categories in the summary statistics section. This ties into my first point, because Capomulin and Ramicane results in less tumor volume, but more mice were tested compared to the others. The difference in mice tested could take some validity away from the results.  \n",
+    "\n",
+    " \n",
+    "\n",
+    "The line graph shows a decrease in size when Capomulin is taken. A sharp decrease in tumor volume after around 30 days. This is further evidence that Capomulin is the more effective drug than the majority in this analysis. \n",
+    "\n",
+    " \n",
+    "\n",
+    "Overall, the output is very consistent with only one outlier in the boxplot. And the summary table shows numbers that are close together in each row in the respective statistical column adjacent to the administered drugs. The two exceptions are Capomulin and Ramicane. They both result in a much lower tumor volume compared to the rest. \n",
+    "\n",
+    " "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "cf32d04b",
@@ -138,7 +164,7 @@
     "# Combine the data into a single dataset\n",
     "lab_data_complete = pd.merge(study_results, mouse_metadata, how=\"left\", on=[\"Mouse ID\"])\n",
     "\n",
-    "# Display the data table for preview\n",
+    "\n",
     "\n",
     "lab_data_complete.head()"
    ]
@@ -146,46 +172,16 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fb03c28c",
+   "id": "7228b31f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/qt/z1139kj16rq91qs03f19sz2c0000gn/T/ipykernel_33949/3547755830.py:1: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
-      "  lab_data_complete[['Drug Regimen','Timepoint']].mean()\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "Timepoint    19.572108\n",
-       "dtype: float64"
+       "249"
       ]
      },
      "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lab_data_complete[['Drug Regimen','Timepoint']].mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "0fafc5a9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12.048192771084338"
-      ]
-     },
-     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,13 +192,12 @@
     "\n",
     "\n",
     "\n",
-    "3000/mouse_count\n",
-    "#mouse_count"
+    "mouse_count\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d4deb2be",
    "metadata": {},
    "outputs": [
@@ -378,7 +373,7 @@
        "1111  Female          21          26  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "1fdb25ff",
    "metadata": {},
    "outputs": [
@@ -609,7 +604,7 @@
        "1592  Female          21          26  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "f782a31a",
    "metadata": {},
    "outputs": [
@@ -737,7 +732,7 @@
        "4    Male          21          25  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "3d0d57e5",
    "metadata": {},
    "outputs": [
@@ -762,7 +757,7 @@
        "248"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "1f46a1a6",
    "metadata": {},
    "outputs": [
@@ -783,7 +778,7 @@
        "1880"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "ce127b51",
    "metadata": {},
    "outputs": [
@@ -964,7 +959,7 @@
        "Zoniferol             6.966589          0.516398  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "24a56708",
    "metadata": {},
    "outputs": [
@@ -1144,7 +1139,7 @@
        "Zoniferol             53.236507  51.818479  48.533355  6.966589  0.516398"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,8 +1152,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8141f418",
+   "metadata": {},
+   "source": [
+    "# Bar and Pie Charts\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "4b8b158e",
    "metadata": {},
    "outputs": [
@@ -1194,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "8a76a64a",
    "metadata": {
     "scrolled": true
@@ -1225,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "18956fa8",
    "metadata": {},
    "outputs": [
@@ -1252,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "305e80c6",
    "metadata": {},
    "outputs": [
@@ -1282,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "27a6f918",
    "metadata": {},
    "outputs": [
@@ -1474,7 +1477,7 @@
        "[248 rows x 8 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1491,8 +1494,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "36ae7ae4",
+   "metadata": {},
+   "source": [
+    "# Quartiles, Outliers and Boxplots\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "3086a2a5",
    "metadata": {},
    "outputs": [
@@ -1537,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "5d0517f7",
    "metadata": {},
    "outputs": [
@@ -1547,7 +1559,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1565,19 +1577,22 @@
     }
    ],
    "source": [
+    "\n",
     "plt.boxplot(tumor_vol_list,labels=drug_list,  sym='r.')\n",
     "plt.show\n"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "ba21b3e5",
+   "cell_type": "markdown",
+   "id": "91cc9189",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Line and Scatter Plots"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "218d0f37",
    "metadata": {},
    "outputs": [
@@ -1606,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "ebdcc9af",
    "metadata": {},
    "outputs": [
@@ -1639,37 +1654,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "c0db70fc",
+   "cell_type": "markdown",
+   "id": "768041ec",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Average_Tumor_volume = capomulin_filter_df[\"Tumor Volume (mm3)\"].mean()\n",
-    "\n",
-    "# regession line\n",
-    "# x_values = capomulin_mean_df['Weight (g)']\n",
-    "# y_values = capomulin_mean_df['Tumor Volume (mm3)']\n",
-    "\n",
-    "# #dotn change\n",
-    "# (slope, intercept, rvalue, pvalue, stderr) = linregress(x_values, y_values)\n",
-    "# regress_values = x_values * slope + intercept\n",
-    "# line_eq = \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2))\n",
-    "# plt.scatter(x_values,y_values)\n",
-    "# plt.plot(x_values,regress_values,\"r-\")\n",
-    "\n",
-    "# plt.annotate(line_eq,(18,32),fontsize=15,color=\"blue\")\n",
-    "\n",
-    "# plt.xlabel('Weight (g)')\n",
-    "# plt.ylabel('Tumor Volume (mm3)')\n",
-    "# plt.title('Scatter plot Tumor volume VS weight')\n",
-    "\n",
-    "\n"
+    "# Correlation and Regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "b156f63b",
    "metadata": {},
    "outputs": [
@@ -1726,22 +1720,6 @@
     "\n",
     "plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d94c7ec7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa1f2ce6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
